# script-language-laboratory

./: README.md
lua/: README.md  block.lua  config.lua  game.lua  grid.lua  main.lua  save.lua
python/: .env.example  README.md  pyproject.toml
python/app/: app.py  model.py  prompts.py  tools.py
python/app/data/: menu.json  opening_hours.json
ruby/: Dockerfile  Gemfile  README.md  crawler.rb  docker-compose.yaml
shell/: README.md  tic-tac-toe.sh
typescript/: README.md
typescript/client/: package.json  pnpm-lock.yaml  prettier.config.mjs
typescript/client/app/: layout.tsx  page.tsx
typescript/client/app/category/[id]/: page.tsx
typescript/client/components/: bag.tsx  paymentForm.tsx  productCard.tsx
typescript/client/contexts/: bagContext.tsx
typescript/client/helpers/: api.ts  dataFetching.ts  iconMapper.tsx
typescript/client/hooks/: useBag.tsx  useCategories.ts  useCategoryData.ts
typescript/database/: package.json  pnpm-lock.yaml
typescript/database/supabase/: seed.sql
typescript/database/supabase/schemas/: categories.sql  products.sql
typescript/server/: .env  eslint.config.mjs  package.json  prettier.config.mjs
typescript/server/src/: index.ts
typescript/server/src/controllers/: category.ts  product.ts
typescript/server/src/database/: index.ts
typescript/server/src/db/: index.ts
typescript/server/src/routes/: categories.ts  index.ts  products.ts
typescript/server/src/types/: category.ts  product.ts
